# WP-Read-WAV-file

./: CMakeLists.txt  build.sh  reader_wav.cpp  reader_wav_helper.cpp
src/: application.cpp  main.cpp  main_alsa_latency  main_timelapse  timelapse.cpp
src/app/: application.cpp
src/app/app_header/: application.h
src/app_header/: application.h
src/reader_wav/: reader_demo.cpp  reader_random_sample.cpp  reader_wav.cpp  reader_wav.h  reader_wav_helper.cpp
src/resources/: main_application.glade  main_application.glade~  signal_area.glade
src/signal_reader/: basic_draw.h  main_signal_reader.cpp  signal_reader.h  sound_wave_sfml_opengl.cpp  sound_wave_sfml_opengl.h
